test/bad/classes/constructor04.px

class A def
    constructor() def
        print this.y
